# skillbox-projects

./: .gitignore  ATMsimulator_Task4.cpp  CMakeLists.txt  Calculator(simple)_Task3.cpp  MechanicalPiano_Task4.cpp  VillageRework_Task2.cpp  anagramCheck_Task3.cpp  arrTurnOver_Task2.cpp  basketFish_task3.txt  birthDayReminderV2_Task2.cpp  birthDayReminder_Task2.cpp  carriagesTrainAnalysis_Task3.cpp  desiredResult_Task2.cpp  documentation_Task1.cpp  doubleStapler_Task2.cpp  evenDigitCountInNum_Task3.cpp  fifthAscendingOrder_Task3.cpp  fileChecker_Task2.cpp  findWordInFile_Task1.cpp  fishingGame_Task3.cpp  foo.h  gameQuetions_Task5.txt  input_outputWeekDays_Task1.cpp  isPng_Task4.cpp  main.cpp  maxSummBetweenIndexes_Task1.cpp  moduleSort_Task4.cpp  muthVector_Task3.cpp  phoneBook_Task1.cpp  rabbitAndStairs_Task2.cpp  randomPicture_Task2.cpp  readingStatement_Task3.cpp  registry_Task2.cpp  season_Task2.cpp  smartHouse_Task5.cpp  speedometr_Task1.cpp  substrCheck_Task3.cpp  swapPointers_Task1.cpp  swapVecArr_Task1.cpp  timeTracking_Task1.cpp  (+5 more)
audioPlayer_Task1/: CMakeLists.txt  audioPlayer.cpp
companyWork_Task2/: CMakeLists.txt  companyWork.cpp
computerSimulator_Task2/: CMakeLists.txt
computerSimulator_Task2/include/: CMakeLists.txt  cpu.h  disk.h  gpu.h  kbd.h  ram.h
computerSimulator_Task2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
desktop_Task3/: CMakeLists.txt  desktop.cpp
elvesVillage_Task3/: CMakeLists.txt  elvesVillage.cpp
figures_Task1/: CMakeLists.txt  figures.cpp
mobileNumSim_Task2/: CMakeLists.txt  mobileNum.cpp
module11/task4/: .gitignore  README.md  crossesAndNaught.cpp  mainTask4.cpp
module12/: AssertTest_Task3.cpp  apartamentHouseTASK1.cpp  apartamentHouse_Task1.cpp  dublicateNumberFind_Task4.cpp  numberSortingTask2.cpp  series of numbers_Task4.cpp
module13/: StoreAndCustomer_Task2.cpp  deleteXvector_Task1.cpp  tinyArray_Task3.cpp
module14/: almostMinecraft_Task7.cpp  banquetTable_Task1.cpp  bubbleWrapFilm_Task5.cpp  crossAndNaught_Task2.cpp  matrix-vectorMultiplication_task4.cpp  matrix_Task3.cpp  seaBattle_Task8.cpp  serpentinePassage_Task6.cpp
operationSimulator_Task1/: CMakeLists.txt
operationSimulator_Task1/lib/: CMakeLists.txt  myLib.cpp  myLib.h
operationSimulator_Task1/src/: CMakeLists.txt  main.cpp
